Fix base selector border cropping

--- a/src/components/Synthetics/SelectorBase/SelectorBase.scss
+++ b/src/components/Synthetics/SelectorBase/SelectorBase.scss
@@ -26,6 +26,7 @@
     border-radius: var(--border-radius-sm);
     background-color: var(--dark-blue-bg);
     border: 1px solid var(--color-gray-800);
+    overflow: hidden;
   }
 
   &-mobile-modal {
